# flight-simulator-interpreter

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  README.rm  UAV_Diagram.drawio  add.cpp  base_exception.hpp  bind_variable.cpp  div.hpp  environment.cpp  environment.hpp  equle_operator.cpp  equle_operator.hpp  expression.hpp  extract_paths.cpp  fib_algo.txt  flight_instructions.txt  generic_json_format.xml  great_operator.cpp  great_operator.hpp  literal.hpp  local_variable.hpp  main  main.cpp  mul.cpp  output.txt  sub.cpp  sub.hpp  variable_expression.cpp  variable_map.cpp  variable_map.hpp
ExpressionTokens/: Makefile  add.cpp  add.hpp  expression.hpp  expressionParser.cpp  expressionParser.hpp  great_operator.cpp  great_operator.hpp  literal.cpp  literal.hpp  mull_operator.cpp  mull_operator.hpp  small_operator.cpp  small_operator.hpp  sub.cpp  sub.hpp  test_expressionTokens.cpp  variable_expression.cpp  variable_expression.hpp
Lexer/: token.cpp  token.hpp  token_enum.hpp
command_module/: CMakeLists.txt  Makefile
command_module/includes/: allocationLocalVarCommand.hpp  allocationRemoteVarCommand.hpp  assignmentCommand.hpp  bindCommand.hpp  codeBlockCommand.hpp  connectCommand.hpp  openDataServerCommand.hpp  printExpCommand.hpp  printStringCommand.hpp  sleepCommand.hpp  whileCommand.hpp
command_module/src/: allocationLocalVarCommand.cpp  allocationRemoteVarCommand.cpp  assignmentCommand.cpp  bindCommand.cpp  codeBlockCommand.cpp  connectCommand.cpp  openDataServerCommand.cpp  printExpCommand.cpp  printStringCommand.cpp  sleepCommand.cpp  whileCommand.cpp
communication_module/: .gitignore  CMakeLists.txt  Makefile  clientTelnetTest.cpp  communicationExceptions.hpp  mainTest.cpp  myExceptions.hpp  serverTest.cpp
communication_module/includes/: TCPclient.hpp  TCPserver.hpp  TCPsocketFile.hpp  netClient.hpp  simulatorServer.hpp
communication_module/src/: TCPclient.cpp  TCPserver.cpp  TCPsocketFile.cpp  netClient.cpp  simulatorServer.cpp
communication_mudule/: .gitignore  Makefile  serverTest.cpp
communication_mudule/includes/: TCPclient.hpp  netClient.hpp  netServer.hpp  simulatorServer.hpp
communication_mudule/src/: TCPsocketFile.cpp  netServer.cpp  simulatorServer.cpp
environment/: CMakeLists.txt  Makefile  dataMap.hpp  dataMapTest.cpp  environment.cpp  environment.hpp  environmentTest.cpp  mainTest.cpp  simulator.cpp  simulator.hpp  simulatorTest.cpp
expression/: CMakeLists.txt  add.cpp  add.hpp  div.cpp  div.hpp  equle_operator.cpp  equle_operator.hpp  expression.hpp  great_equal_operator.cpp  great_equal_operator.hpp  great_operator.cpp  great_operator.hpp  less_equal_operator.cpp  less_equal_operator.hpp  literal.cpp  literal.hpp  mul.cpp  mul.hpp  not_equal_operator.cpp  not_equal_operator.hpp  small_operator.cpp  small_operator.hpp  sub.cpp  sub.hpp  variable_expression.cpp  variable_expression.hpp
expressionTokens/: Makefile  add.cpp  add.hpp  div.cpp  div.hpp  expression.hpp  expressionParser.cpp  expressionParser.hpp  great_operator.cpp  literal.hpp  mull_operator.cpp  small_operator.hpp  sub.cpp  sub.hpp  test_expressionTokens.cpp  variable_expression.cpp
includes/: assignmentCommand.hpp  bindCommand.hpp  codeBlockCommand.hpp  connectCommand.hpp  expression.hpp  openDataServerCommand.hpp  printStringCommand.hpp  printVarCommand.hpp  sleepCommand.hpp  whileCommand.hpp
includes/command/: assignmentCommand.hpp  bindCommand.hpp  codeBlockCommand.hpp  command.hpp  connectCommand.hpp  openDataServerCommand.hpp  printStringCommand.hpp  printVarCommand.hpp  sleepCommand.hpp  whileCommand.hpp
includs/: assignmentCommand.hpp  bindCommand.hpp  codeBlockCommand.hpp  command.hpp  openDataServerCommand.hpp  printStringCommand.hpp  sleepCommand.hpp  variableValue.hpp
includs/command/: connectCommand.hpp  printVarCommand.hpp  sleepCommand.hpp  whileCommand.hpp
lexer/: CMakeLists.txt  I_lexer.hpp  Makefile  lexer.cpp  lexer.hpp  lexer_exceptions.hpp  lexer_test.cpp  token.cpp  token.hpp  token_enum.hpp
parser/: CMakeLists.txt  commands_factory.cpp  commands_factory.hpp  expressionParser.cpp  expressionParser.hpp  parser.cpp  parser.hpp  parser_exceptions.hpp  test_expressionTokens.cpp
parser/expressionParser/: Makefile  add.cpp  add.hpp  div.cpp  div.hpp  expressionParser.cpp  expressionParser.hpp  great_operator.cpp  great_operator.hpp  literal.cpp  mull_operator.cpp  mull_operator.hpp  small_operator.cpp  small_operator.hpp  sub.cpp  sub.hpp  test_expressionTokens  test_expressionTokens.cpp
variable/: CMakeLists.txt  bind_variable.cpp  bind_variable.hpp  local_variable.cpp  local_variable.hpp  remote_variable.cpp  remote_variable.hpp  variable.hpp  variable_map.cpp  variable_map.hpp
